--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0"
