--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0"
+  },
+  "dependencies": {
+    "babel-register": "^6.26.0"
   }
 }
