--- a/package.json
+++ b/package.json
@@ -51,7 +51,11 @@
     "eslint-plugin-react": "^7.4.0",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
-    "nyc": "^11.3.0"
+    "node-fetch": "^1.7.3",
+    "nyc": "^11.3.0",
+    "sinon": "^4.1.2",
+    "sinon-chai": "^2.14.0",
+    "sinon-stub-promise": "^4.0.0"
   },
   "dependencies": {
     "babel-register": "^6.26.0"
