--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spotify-wrapper",
   "version": "1.0.0",
   "description": "A javascript wrapper library to work with Spotify API.",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint && npm run test:coverage",
@@ -44,11 +44,10 @@
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
-    "eslint": "^4.11.0",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^4.12.1",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "node-fetch": "^1.7.3",
